--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-gesture-handler": "^2.3.0",
     "react-native-safe-area-context": "^4.1.0",
     "react-native-screens": "^3.13.0"
   },
